// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DependencyChecker matches snapshot when dependencies are loading 1`] = `
<div class="ipl-expansion-panel__content" data-v-67856a23="">
  <div class="ipl-expansion-panel__header" data-v-67856a23="">
    <div class="ipl-expansion-panel__header-background" data-v-67856a23=""></div>
    <div class="ipl-expansion-panel__title" data-v-67856a23="">Dependency check</div>
    <font-awesome-icon-stub icon="chevron-left" border="false" fixedwidth="false" listitem="false" pulse="false" swapopacity="false" spin="false" symbol="false" inverse="false" class="icon content-expanded" data-v-67856a23=""></font-awesome-icon-stub>
    <div class="header-extra" data-v-67856a23=""></div>
  </div>
  <div class="content" data-v-67856a23="">
    <div class="status-row layout horizontal center-vertical m-t-4">
      <div class="status-row__status-light color-yellow"></div>Loading...
    </div>
  </div>
</div>
`;

exports[`DependencyChecker matches snapshot when dependencies are present 1`] = `
<div class="ipl-expansion-panel__content" data-v-67856a23="">
  <div class="ipl-expansion-panel__header" data-v-67856a23="">
    <div class="ipl-expansion-panel__header-background" data-v-67856a23=""></div>
    <div class="ipl-expansion-panel__title" data-v-67856a23="">Dependency check</div>
    <font-awesome-icon-stub icon="chevron-left" border="false" fixedwidth="false" listitem="false" pulse="false" swapopacity="false" spin="false" symbol="false" inverse="false" class="icon" data-v-67856a23=""></font-awesome-icon-stub>
    <div class="header-extra" data-v-67856a23=""></div>
  </div>
  <div class="content" data-v-67856a23="" style="display: none;">
    <div class="status-row layout horizontal center-vertical m-t-4">
      <div class="status-row__status-light color-green"></div>Found Node.js 12.3.4.
    </div>
  </div>
</div>
`;

exports[`DependencyChecker matches snapshot when node.js is missing 1`] = `
<div class="ipl-expansion-panel__content" data-v-67856a23="">
  <div class="ipl-expansion-panel__header" data-v-67856a23="">
    <div class="ipl-expansion-panel__header-background" data-v-67856a23=""></div>
    <div class="ipl-expansion-panel__title" data-v-67856a23="">Dependency check</div>
    <font-awesome-icon-stub icon="chevron-left" border="false" fixedwidth="false" listitem="false" pulse="false" swapopacity="false" spin="false" symbol="false" inverse="false" class="icon content-expanded" data-v-67856a23=""></font-awesome-icon-stub>
    <div class="header-extra" data-v-67856a23=""></div>
  </div>
  <div class="content" data-v-67856a23="">
    <div class="status-row layout horizontal center-vertical m-t-4">
      <div class="status-row__status-light color-red"></div>Node.js not found. Install Node.js and relaunch to continue.
    </div>
  </div>
</div>
`;
